#
# StarPU is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
# See the GNU Lesser General Public License in COPYING.LGPL for more details.

StarPU 1.0 (svn revision xxxx)
==============================================
The extensions-again release

  * Add a hook function pre_exec_hook in struct starpu_sched_policy.
        The function is meant to be called in drivers. Schedulers
        can use it to be notified when a task is about being computed.
  * Define access modes for data handles into starpu_codelet and no longer
	in starpu_task. Hence mark (struct starpu_task).buffers as
	deprecated, and add (struct starpu_task).handles and (struct
	starpu_codelet).modes
  * Install headers under $includedir/starpu/1.0.
  * Deprecate cost_model, and introduce cost_function, which is provided
	with the whole task structure, the target arch and implementation
	number
  * Permit the application to provide its own size base for performance
	models
  * Fields xxx_func of struct starpu_codelet are made deprecated. One
	should use instead fields xxx_funcs.
  * Applications can provide several implementations of a codelet for the
	same architecture.
  * A new multi-format interface permits to use different binary formats
	on CPUs & GPUs, the conversion functions being provided by the
	application and called by StarPU as needed (and as less as
	possible).
  * Add a gcc plugin to extend the C interface with pragmas which allows to
	easily define codelets and issue tasks.
  * Add codelet execution time statistics plot.
  * Add bus speed in starpu_machine_display.
  * Add a StarPU-Top feedback and steering interface.
  * Documentation improvement.
  * Add a STARPU_DATA_ACQUIRE_CB which permits to inline the code to be
	done.
  * Permit to specify MPI tags for more efficient starpu_mpi_insert_task
  * Add SOCL, an OpenCL interface on top of StarPU.